@@ -33,7 +33,7 @@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-SUBDIRS              = examples api
+SUBDIRS              = examples @DOCSDIR@
 DIST_SUBDIRS         = examples api
 
 EXTRA_DIST           = CHANGES.old ChangeLog INSTALL TODO
